# playback_framework

Playback_Framework/: .project  CMakeLists.txt  config.json  package.xml
Playback_Framework/Docs/: OutputManager.dia  RosbagManager.dia
Playback_Framework/include/: Constants.h  InputReader.h  UI.h  node_base.h
Playback_Framework/include/platform_communicator/: communicator.h  communicator_factory.h  platform_interface.h  platform_interface_impl.h  ros_communicator.h  ros_communicator_impl.h
Playback_Framework/msg/: ConfigMsg.msg
Playback_Framework/src/: FeatureNode.cpp  Output_Manager.cpp  Rosbag_Manager.cpp  UI.cpp  node_base.cpp
